fix: (sfui2-442) ProductCard badge layout issues (#350)
* fix: badge layout issues

* fix: remove unnecessary imports

* fix: remove unused parts

* fix: after CR

--- a/packages/sfui/styles/components/VsfProductCard.scss
+++ b/packages/sfui/styles/components/VsfProductCard.scss
@@ -117,7 +117,7 @@
     @apply h-auto object-cover aspect-square;
 
     &-top {
-      @apply absolute top-0 left-0;
+      @apply absolute -top-px -left-px;
     }
 
     &-bottom {
